<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    style="@style/widthmatch_heightmatch"
    android:background="@drawable/stars"
    android:orientation="vertical"
    tools:context="com.example.sanya.lighttravel.MainActivity">

    <ScrollView style="@style/widthmatch_heightwrap">

        <LinearLayout
            style="@style/widthmatch_heightwrap"
            android:orientation="vertical">

            <RelativeLayout style="@style/widthmatch_heightwrap">

                <ImageView
                    style="@style/widthmatch_heightwrap"
                    android:scaleType="centerCrop"
                    android:src="@drawable/universe_bg" />

                <TextView
                    style="@style/lighttraveltextview"
                    android:text="LightTravel" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/mainpadding">

                <TextView
                    style="@style/whatistextview"
                    android:text="@string/whatis" />

                <TextView
                    style="@style/widthmatch_heightwrap"
                    android:text="@string/about"
                    android:textColor="@android:color/white" />

                <View style="@style/hline" />

                <TextView
                    android:id="@+id/geoloc"
                    style="@style/datalines"
                    android:clickable="true"
                    android:drawableLeft="@drawable/ic_my_location_white_48dp"
                    android:text="@string/address" />

                <TextView
                    android:id="@+id/phonecall"
                    style="@style/datalines"
                    android:clickable="true"
                    android:drawableLeft="@drawable/ic_call_white_48dp"
                    android:text="@string/phone" />

                <TextView
                    android:id="@+id/email"
                    style="@style/datalines"
                    android:clickable="true"
                    android:drawableLeft="@drawable/ic_email_white_48dp"
                    android:text="@string/email" />

                <TextView
                    style="@style/mottoview"
                    android:text="@string/motto" />

                <Button
                    style="@style/widthmatch_heightwrap"
                    android:layout_centerVertical="true"
                    android:layout_marginBottom="@dimen/defmargin"
                    android:text="@string/ticket" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>